--- a/calc-webapp/src/main/webapp/css/calc.css
+++ b/calc-webapp/src/main/webapp/css/calc.css
@@ -738,19 +738,19 @@ ul.scroll-menu {
 	min-height: 10em;
 	min-width: 20em;
 	padding-top: 1.4em;
-	border-radius: 8px;
+	border-radius: 15px;
 	-webkit-box-shadow: 8px 8px 7px 2px rgba(149,165,166,0.68);
 	-moz-box-shadow: 8px 8px 7px 2px rgba(149,165,166,0.68);
 	box-shadow: 8px 8px 7px 2px rgba(149,165,166,0.68);
+	text-align: center;
 }
 
 .dialog .content {
-	text-align: center;
 	padding: 10px;
 }
 	
 .dialog .footer {
-	text-align: center;
+/* 	text-align: center; */
 }
 
 .dialog .footer button {
