--- a/calc-webapp/src/main/webapp/css/calc.css
+++ b/calc-webapp/src/main/webapp/css/calc.css
@@ -656,16 +656,16 @@ ul.scroll-menu {
 }
 #step-edit-page #calculation-step-exec-container .test {
 	padding-bottom : 5em;
-	padding-top : 5em;
+	padding-top : 0em;
 }
 #step-edit-page #calculation-step-exec-container .test .progress-bar-section {
 	display: none;
 }
 
 #step-edit-page #calculation-step-exec-container .exec {
-	height: 25%;
 	border-top: 1px solid #496d7e;
 	padding-top : 5em;	
+	padding-bottom : 5em;	
 }
 .step-edit-exec-option {
 /* 	border-top: 1px solid #496d7e; */
