--- a/calc-webapp/src/main/webapp/css/calc.css
+++ b/calc-webapp/src/main/webapp/css/calc.css
@@ -15,6 +15,7 @@ html, body {
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
 	letter-spacing:0.1em;
+	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 #container {
@@ -148,7 +149,7 @@ button.option-btn-selected:hover {
     
 }
 .page-section .form-group {
-	margin-top:40px;
+	margin-top:25px;
 }
 .section-home button {
 /* 	font-size:0.5em; */
@@ -274,7 +275,7 @@ button.settings:hover {
 * Footer
 */
 #footer {
-  	height: 150px;
+  	height: 10%;
 	position: fixed;
 /* 	top: -75px; */
 /* 	z-index: 999; */
@@ -284,21 +285,22 @@ button.settings:hover {
 /* 	top:0px; */
 } 
 .footer-placeholder {
-	height: 150px;	
+	height: 10%;	
 }
 
 #footer div{
 	height: 100%;
 }
 #footer .links {
-	margin-top:40px;
+/* 	margin-top:40px; */
+	padding: 10px 0px;
 	text-align:center;
 	width:100%;
 }
 #footer .links  button {
-	height:50%;
-	width: 18%;
-	font-size:1.5em;
+	height: 100%;
+	width: 25%;
+	font-size:1.4em;
 	font-weight: 100;
 /* 	font-size: 1.7em; */
 /* 	font-weight: 200; */
@@ -308,10 +310,12 @@ button.settings:hover {
 /* 	font-size: 0.8em; */
 }
 #footer .logo {
-	font-size: 1.8em;
+	font-size: 1.5em;
 	font-weight: 100;
-	margin-top: 30px;
+/* 	margin-top: 30px; */
 	text-align:center;
+	position:absolute;
+	top: 40px;
 /* 	display:block; */
 	
 }
@@ -328,7 +332,7 @@ button.settings:hover {
 
 
 #footer button.back {
-	font-size:4em;	
+	font-size:3em;	
 	display:none;	
 	width: 70%;
 }
@@ -419,8 +423,10 @@ formula editor
 }
 
 .axis text, .axis-label {
-    font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    font-size: 0.9em;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+/*     font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif; */
+    font-size: 0.7em;
+    font-weight: 100;
 /*     fill: #ecf0f1; */
     fill: rgba(236, 240, 241, .7);
 }
@@ -690,6 +696,7 @@ ul.scroll-menu {
 #step-edit-page #calculation-step-exec-container .test {
 	padding-bottom : 5em;
 	padding-top : 0em;
+	width: 100%;
 }
 #step-edit-page #calculation-step-exec-container .test .progress-bar-section {
 	display: none;
