updated sampling design page

--- a/calc-webapp/src/main/webapp/css/calc.css
+++ b/calc-webapp/src/main/webapp/css/calc.css
@@ -778,6 +778,11 @@ ul.scroll-menu {
 .button-bar-inner button i{
 	font-size: 2em;
 }
+
+
+.width100 {
+	width: 100%;	
+}
 .height100 {
 	height: 100%;
 }
