--- a/calc-webapp/src/main/webapp/css/calc.css
+++ b/calc-webapp/src/main/webapp/css/calc.css
@@ -675,14 +675,20 @@ ul.scroll-menu {
 	width: 100%;
 }
 #settings .group-header div {
-	height: 50%;
-	padding-top: 1.1em; 
+	height: 40%;
 	border-bottom: 1px solid #8f91a0;
 	color: #8f91a0;
-/* 	background-color: #5d5f69;  */
-	font-size: 1.2em;
+	font-size: 1.1em;
+	padding: 1.3em 0em;
+	line-height: 1.5em;
 }
 
+/**
+* AOI settings section
+*/
+.aoi-import-section div{
+	padding: 0.6em 0em;
+}
 
 /**
 **
