changed style home settings btns

--- a/calc-webapp/src/main/webapp/css/calc.css
+++ b/calc-webapp/src/main/webapp/css/calc.css
@@ -193,6 +193,7 @@ button.settings:hover {
 	background-color: #5f6066;
 	border-color: #5f6066;
 }
+
 .row1 {
 	height: 40%;
 	width: 100%;
@@ -218,6 +219,23 @@ button.settings:hover {
 /* 	line-height: 2em; */
 	overflow: visible;
 	border-radius:8px;
+}
+#settings .btn-home ,
+#settings .btn-home:focus {
+	height: 7em;
+	width: 15%;
+	font-size: 1.1em;
+/* 	font-weight: 200; */
+	line-height: 2em;
+	overflow: visible;
+	border-radius: 0px;
+	background-color: #5d616e;
+	border: none;
+	letter-spacing: 0.03em;
+	color: #d0d4d9;
+}
+#settings .btn-home:hover {
+	background-color: #676c7a;
 }
 /**
 * Default nav bar
@@ -990,7 +1008,7 @@ ul.ui-sortable li {
 .pack-node text {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 /*     font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif; */
-   font-size: 0.9em;
+/*    font-size: 0.9em; */
    font-weight: 200;
   fill: rgb(236, 240, 241);
 }
