--- a/calc-webapp/src/main/webapp/css/calc.css
+++ b/calc-webapp/src/main/webapp/css/calc.css
@@ -648,12 +648,34 @@ ul.scroll-menu {
 /* 	width: 100%; */
 /* } */
 
-#sampling-design .option {
-	padding: 1.5em 0em;
-	text-align: left;
-	margin: 0px 0px;
+#sampling-design button.prev ,
+#sampling-design button.next {
+	display: inline-block;
+	border: none;
+	border-radius: 0px;
+	font-size: 5em;
+	color: #676c7a;
+	background: none;
 }
-
+#sampling-design .step {
+	padding: 1.5em 0em;
+/* 	text-align: left; */
+	margin: 0px 0px;
+	font-size: 1.4em;
+}
+#sampling-design .step>.row {
+	padding: 1em 0px;
+}
+/* sampling desing settings ui */
+#sampling-design .sampling-design button.option-btn-selected {
+	width: 10em;
+/* 	ma */
+/* 	background-color: #758677; */
+	height: 7em;
+	margin: 0.2em 0.5em;
+/* 	padding: 2em 0px; */
+/* 	font-size: 1.3em; */
+}
 
 /** Old */
 #sampling-design .sampling-unit-section button ,
