--- a/calc-webapp/src/main/webapp/css/calc.css
+++ b/calc-webapp/src/main/webapp/css/calc.css
@@ -297,7 +297,7 @@ button.settings:hover {
   	height: 12%;
 	position: fixed;
 /* 	top: -75px; */
-/* 	z-index: 999; */
+	z-index: 10;
 	width: 100%;
 	background-color: #ecf0f1;
 	margin:0px;
