ui improvements of data vis / bug fixes on combobox

--- a/calc-webapp/src/main/webapp/css/calc.css
+++ b/calc-webapp/src/main/webapp/css/calc.css
@@ -103,6 +103,22 @@ button.option-btn-selected:hover {
 	border-radius: 1px; 
 }
 
+/**
+Filter button 
+*/
+button.filter-btn ,
+button.filter-btn:focus {
+	color: #888889;
+	background: transparent;
+	border: none;
+}
+button.no-background:hover {
+	color: #758677;
+	background-color: transparent;
+	border: none;
+}
+
+
 /** Home Sections*/
 .section-home, .page-section {
 	overflow: auto;
@@ -447,7 +463,7 @@ Data vis options
 	padding: 0.3em;
 }
 .data-vis-options .entity-select {
-	padding: 1.6em;
+	padding: 1em;
 }
 .data-vis-options .quantities ,
 .data-vis-options .categories {
@@ -468,6 +484,12 @@ Data vis options
 .data-vis-options .view-results-btn button {
 	width: 50%;
 }
+
+.clearfix:after { content: "."; display: block; height: 0; clear: both; visibility: hidden; }
+.clearfix { display: inline-block; }
+* html .clearfix { height: 1%; } /* Hides from IE-mac \*/
+.clearfix { display: block; }
+
 /**
 * == common styles
 */
@@ -914,6 +936,18 @@ table.import-csv-table input[type=checkbox] {
 }
 
 
+.width10 {
+	width: 10%;	
+}
+.width20 {
+	width: 20%;	
+}
+.width80 {
+	width: 80%;	
+}
+.width90 {
+	width: 90%;	
+}
 .width100 {
 	width: 100%;	
 }
@@ -947,7 +981,9 @@ table.import-csv-table input[type=checkbox] {
 .height100 {
 	height: 100%;
 }
-
+.float-left {
+	float: left;
+}
 /**
 * Dialog
 */
