--- a/calc-webapp/src/main/webapp/css/calc.css
+++ b/calc-webapp/src/main/webapp/css/calc.css
@@ -510,6 +510,14 @@ Data vis options
 .data-vis-options .view-results-btn button {
 	width: 50%;
 }
+.data-vis-options .entity-header {
+	font-size: 0.8em;
+	text-align: left;
+	padding-left: 20%;
+	padding-top: 2%;
+	font-weight: 100;
+}
+
 
 .clearfix:after { content: "."; display: block; height: 0; clear: both; visibility: hidden; }
 .clearfix { display: inline-block; }
