scatter plot bug fix. variables were always added to the selection even when 2(max allowed) were selected

--- a/calc-webapp/src/main/webapp/css/calc.css
+++ b/calc-webapp/src/main/webapp/css/calc.css
@@ -469,7 +469,7 @@ formula editor
 	text-align: center;
 /* 	border-bottom: none; */
 	border-top: 1px solid #ecf0f1;
-	
+	padding: 0.5em 0px;	
 }
 /**
 Data vis options
